syntax = "proto3";
package pb;

service AppRuntimeSync {
  rpc GetAppStatus (StatusRequest) returns (StatusMessage) {}
  rpc GetAppDisk (StatusRequest) returns (DiskMessage) {}
  rpc SetAppStatus (StatusMessage) returns (ErrorMessage) {}
  rpc CheckAppStatus (StatusRequest) returns (ErrorMessage) {}
  rpc IgnoreDeleteEvent (Ignore) returns (ErrorMessage) {}
 rpc RmIgnoreDeleteEvent (Ignore) returns (ErrorMessage) {}
}

message Ignore {
  string name = 1;
}

message StatusRequest {
  string service_ids = 1;
}

message StatusMessage {
  map<string, string> status = 1;
}

message DiskMessage {
  map<string, double> disks = 1;
}

message ErrorMessage {
  string message = 1;
}